# HangDriver

./: .gitignore  LICENSE  README.md
AR_code/: CMakeLists.txt  complier.sh
AR_code/src/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARDrawingContext1.cpp  ARPipeline.cpp  CMakeLists.txt  Pattern.cpp  PatternDetector.cpp  PatternDetector.hpp  main.cpp
ARonRoad/: CMakeLists.txt
ARonRoad/src/: ARDrawingContext.cpp  ARDrawingContext.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  GeometryTypes.cpp  GeometryTypes.hpp  main.cpp
GUI/: CMakeLists.txt  hangGUI.cpp  hangGUI.hpp  main.cpp
GUI/AR_withGui/: ARDrawingContext.cpp  ARDrawingContext.cpp___jb_tmp___  ARDrawingContext.hpp  CMakeLists.txt  PatternDetector.cpp  PatternDetector.hpp  draw.cpp  hangGUI.cpp  hangGUI.hpp  main.cpp  output_road.cpp
GUI_Qt/: CMakeLists.txt  back_detection.cpp  back_detection.h  detect_display.cpp  detect_display.h  gui_qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-gui_qt-Desktop_Qt_5_8_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
documents/: 02月27日航向第二周会议记录.md  2017年03月04日 航向 会议记录.md  冯如杯网审视频文案.md
lane mentor/output route final/: main.cpp
lane_detection/: README.md  lanedetection.py  lanedetection2.py
lane_detection/testlane2/: CMakeLists.txt  main.cpp
lane_mentor/Floyd/: CMakeLists.txt  main.cpp
lane_mentor/necessary_files/: area_ruler.txt  key-in_route_info.txt  next_node_info.txt  readme.txt  routes.txt
lane_mentor/output_route_final/: CMakeLists.txt  main.cpp
lane_mentor/output_route_with_direction/: CMakeLists.txt  main.cpp
small_sence/: README.md
small_sence/3d_camera/: a.avi  extrinsics.yml  intrinsics.yml  save_pic.py  save_video.py
small_sence/calibration/: CMakeLists.txt  calibration.cpp  cam_left.yml  cam_rigth.yml  camera_left.yml  camera_right.yml  extrinsics.yml  intrinsics.yml  stereo_calib.cpp
small_sence/postion_detect/: CMakeLists.txt
small_sence/postion_detect/back_detection_cuda/: CMakeLists.txt  main.cpp  output_road.cpp
small_sence/postion_detect/back_detection_cuda/AR/: ARDrawingContext.cpp  ARDrawingContext.hpp  CMakeLists.txt  Pattern.cpp  PatternDetector.cpp  main.cpp  output_road.cpp
small_sence/postion_detect/test/: CMakeLists.txt  back_track.py
socket/: #socketServer.py#  socSer.py  socketClient.py  socketServer.py
ssd-cpp/src/: detector.cpp  main.cpp
